--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,15 @@
 name = "SelfconsistentBorn"
 uuid = "26c8d85c-21b4-456e-8614-f24489651b71"
-authors = ["Vasilii Vadimov"]
 version = "1.0.0-DEV"
+authors = ["Vasilii Vadimov"]
+
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 
 [compat]
+LinearAlgebra = "1.12.0"
+QuadGK = "2.11.2"
 julia = "1.6.7"
 
 [extras]
