--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ version = "1.0.0-DEV"
 authors = ["Vasilii Vadimov"]
 
 [deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 
 [compat]
+ForwardDiff = "1.2.2"
 LinearAlgebra = "1.12.0"
 QuadGK = "2.11.2"
 julia = "1.6.7"
